# jscip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.windsurf/rules/: workspace.md
docs/: api.md  index.md
examples/: README.md  basic_usage.py  basics.py  constraints.py  derived_parameters.py  hypergrid.py  hypergrid_example.py  integration.py  merge.py  vector_parameters.py
jscip/: __init__.py  hypergrid.py  main.py  parameter_bank.py  parameter_set.py  parameters.py
notebooks/: demo.ipynb  demo2.ipynb
test/: test_derived_parameter.py  test_derived_vector_parameter.py  test_hypergrid.py  test_independent_parameter.py  test_integration.py  test_parameter_bank.py  test_parameter_bank_extended.py  test_parameter_bank_vectors.py  test_parameter_set_vectors.py  test_sampling_conversion_vectors.py  test_type_support.py  test_vector_constraints.py  test_vector_parameter.py
